--- a/res/layout/contact_stats_item.xml
+++ b/res/layout/contact_stats_item.xml
@@ -56,17 +56,17 @@
             android:layout_weight=".15"
             android:linksClickable="false"
             android:autoText="false"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center"
             android:textAlignment="center" />
 
         <TextView
             style="@style/AppTheme"
             android:id="@+id/contact_stats_item_in_value"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_weight=".15"
             android:linksClickable="false"
-            android:autoText="true"
+            android:autoText="false"
             android:layout_gravity="center_vertical"
             android:textAlignment="center" />
     </LinearLayout>
