--- a/res/layout/event_entry_fragment.xml
+++ b/res/layout/event_entry_fragment.xml
@@ -106,19 +106,24 @@
                     android:layout_marginTop="10dp">
 
                     <TextView
-                        android:layout_width="125dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                         android:text="Event Class"
-                        android:id="@+id/event_class_title" />
+                        android:id="@+id/event_class_title"
+                        android:layout_weight=".34"
+                        android:autoText="true" />
 
                     <Spinner
-                        android:layout_width="262dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:id="@+id/event_class_spinner"
                         android:layout_alignParentTop="true"
                         android:prompt="@string/class_prompt"
-                        android:spinnerMode="dialog" />
+                        android:spinnerMode="dialog"
+                        android:layout_weight=".66"
+                        android:background="@android:drawable/alert_light_frame"
+                        android:clickable="true" />
 
                 </LinearLayout>
 
@@ -132,17 +137,19 @@
                     android:layout_marginTop="10dp">
 
                     <TextView
-                        android:layout_width="125dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                         android:text="Event Type"
-                        android:id="@+id/event_type_title" />
+                        android:id="@+id/event_type_title"
+                        android:layout_weight=".33" />
 
                     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:id="@+id/raidioGroup_incoming_outgoing"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_weight=".66">
 
 
 
@@ -182,32 +189,33 @@
                     android:weightSum="1">
 
                     <TextView
-                        android:layout_width="125dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                         android:text="Address"
-                        android:id="@+id/address_title" />
+                        android:id="@+id/address_title"
+                        android:layout_weight=".33" />
 
                     <Button
                         style="?android:attr/buttonStyleSmall"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Address"
                         android:id="@+id/address"
-                        android:layout_gravity="right"
-                        android:layout_weight="1.13"
+                        android:layout_weight=".66"
                         android:background="@android:drawable/alert_light_frame"
                         android:textAlignment="center"
                         android:shadowColor="#fff5f5f5"
                         android:singleLine="false"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:paddingRight="20dp"
-                        android:paddingLeft="20dp"
-                        android:layout_marginRight="15dp"
+                        android:paddingRight="@dimen/padding"
+                        android:paddingLeft="@dimen/padding"
+                        android:layout_marginRight="@dimen/padding"
                         android:minHeight="60dp"
                         android:minLines="2"
-                        android:maxLines="3" />
+                        android:maxLines="3"
+                        android:layout_marginLeft="@dimen/padding" />
 
                 </LinearLayout>
 
@@ -217,28 +225,34 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/event_duration_layout"
                     android:focusableInTouchMode="false"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginLeft="@dimen/padding"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="@dimen/padding">
 
                     <TextView
-                        android:layout_width="125dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                         android:text="Duration"
-                        android:id="@+id/event_duration_title" />
+                        android:id="@+id/event_duration_title"
+                        android:layout_weight=".34" />
 
                     <Spinner
-                        android:layout_width="190dp"
-                        android:layout_height="40dp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:id="@+id/edit_duration"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginLeft="@dimen/padding"
                         android:spinnerMode="dialog"
                         android:prompt="@string/duration_prompt"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:layout_weight=".66"
+                        android:layout_marginRight="@dimen/padding"
+                        android:background="@android:drawable/alert_light_frame"
+                        style="?android:attr/buttonStyleSmall"
+                        android:paddingLeft="30dp" />
 
                 </LinearLayout>
 
@@ -253,24 +267,28 @@
                     android:divider="@android:drawable/divider_horizontal_textfield">
 
                     <TextView
-                        android:layout_width="125dp"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                         android:text="@string/event_notes"
-                        android:id="@+id/evetn_notes_title" />
+                        android:id="@+id/evetn_notes_title"
+                        android:layout_weight=".33" />
 
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:inputType="textMultiLine"
                         android:id="@+id/event_notes"
                         android:layout_gravity="center_horizontal"
-                        android:hint="..."
-                        android:minLines="3"
+                        android:hint="  ..."
+                        android:minLines="6"
                         android:gravity="start"
                         android:textIsSelectable="false"
-                        android:layout_marginLeft="@dimen/padding" />
+                        android:layout_marginLeft="@dimen/padding"
+                        android:layout_marginTop="@dimen/padding"
+                        android:layout_weight=".66"
+                        android:background="@android:drawable/alert_light_frame" />
                 </LinearLayout>
 
                 <LinearLayout
