--- a/res/menu/event_entry_menu.xml
+++ b/res/menu/event_entry_menu.xml
@@ -16,6 +16,10 @@
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-
+    <item
+        android:id="@+id/menu_edit_contact"
+        android:title="@string/menu_edit_contact"
+        android:icon="@drawable/ic_action_edit"
+        android:showAsAction="ifRoom"/>
 
 </menu>
