--- a/res/menu/contact_detail_menu.xml
+++ b/res/menu/contact_detail_menu.xml
@@ -46,4 +46,10 @@
             android:icon="@drawable/ic_action_edit"
             android:showAsAction="ifRoom"/>
 
+    <item
+        android:id="@+id/run_interval_stats"
+        android:title="@string/menu_run_interval_stats"
+        android:icon="@drawable/ic_action_statistics"
+        android:showAsAction="ifRoom"/>
+
 </menu>
