Implemented the image blur and parallax within the contact detail activity. Still need to fix the small amount of margin at the bottom of the image.
Disconncected the intent on the date import notification.

--- a/res/layout/contact_stats_item.xml
+++ b/res/layout/contact_stats_item.xml
@@ -45,6 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_weight=".7"
             style="@style/AppTheme"
+            android:textColor="#eee"
             android:autoText="false"
             android:layout_gravity="center_vertical" />
 
@@ -56,6 +57,7 @@
             android:layout_weight=".15"
             android:linksClickable="false"
             android:autoText="false"
+            android:textColor="#eee"
             android:layout_gravity="center"
             android:textAlignment="center" />
 
@@ -67,6 +69,7 @@
             android:layout_weight=".15"
             android:linksClickable="false"
             android:autoText="false"
+            android:textColor="#eee"
             android:layout_gravity="center_vertical"
             android:textAlignment="center" />
     </LinearLayout>
