--- a/res/layout/contact_detail_fragment.xml
+++ b/res/layout/contact_detail_fragment.xml
@@ -23,6 +23,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <ImageView
+        android:id="@+id/blurred_contact_detail_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <ImageView
+        android:id="@+id/contact_detail_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <!--android:src="@drawable/image" -->
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -30,7 +43,7 @@
         android:id="@+id/c">
 
 
-        <ScrollView
+        <com.example.android.contactslist.util.ObservableScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/scrollView" >
@@ -78,15 +91,6 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/action_layout_container"
-                    android:focusableInTouchMode="true">
-
-                </LinearLayout>
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -94,6 +98,8 @@
                     android:text="Details"
                     android:id="@+id/textNotesTitle"
                     android:textStyle="bold"
+                    android:textColor="#eee"
+                    android:background="#99333333"
                     android:textAlignment="center"
                     android:layout_gravity="center_horizontal"
                     android:layout_alignParentTop="true"
@@ -114,6 +120,7 @@
                     android:focusableInTouchMode="true"
                     android:divider="@android:drawable/divider_horizontal_textfield"
                     android:dividerPadding="10dp"
+                    android:background="#99333333"
                     android:id="@+id/stats_layout_header">
 
                     <TextView
@@ -121,6 +128,7 @@
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceMedium"
                         android:text="Medium Text"
+                        android:textColor="#eee"
                         android:id="@+id/text_detailsSubtitle" />
 
                     <LinearLayout
@@ -172,6 +180,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/stats_layout_container"
                     android:showDividers="end"
+                    android:background="#99333333"
                     android:divider="@android:drawable/divider_horizontal_textfield">
 
                 </LinearLayout>
@@ -313,7 +322,7 @@
                     android:layout_height="fill_parent"
                     android:id="@+id/contact_details_layout"></LinearLayout>
             </LinearLayout>
-        </ScrollView>
+        </com.example.android.contactslist.util.ObservableScrollView>
 
 
     </LinearLayout>
@@ -332,6 +341,3 @@
         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </FrameLayout>
-
-
-
