--- a/res/layout/contact_stats_item.xml
+++ b/res/layout/contact_stats_item.xml
@@ -45,7 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_weight=".7"
             style="@style/AppTheme"
-            android:textColor="#eee"
+            android:textColor="@color/off_white_1"
             android:autoText="false"
             android:layout_gravity="center_vertical" />
 
@@ -57,7 +57,7 @@
             android:layout_weight=".15"
             android:linksClickable="false"
             android:autoText="false"
-            android:textColor="#eee"
+            android:textColor="@color/off_white_1"
             android:layout_gravity="center"
             android:textAlignment="center" />
 
@@ -69,7 +69,7 @@
             android:layout_weight=".15"
             android:linksClickable="false"
             android:autoText="false"
-            android:textColor="#eee"
+            android:textColor="@color/off_white_1"
             android:layout_gravity="center_vertical"
             android:textAlignment="center" />
     </LinearLayout>
