--- a/res/layout/import_activity.xml
+++ b/res/layout/import_activity.xml
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Phone/SMS Import"
-            android:id="@+id/textView2"
+            android:id="@+id/contact_name_image_header"
             android:layout_gravity="center_horizontal"
             android:layout_below="@+id/space"
             android:layout_centerHorizontal="true" />
@@ -110,7 +110,7 @@
             android:layout_height="wrap_content"
             android:text="Import Data"
             android:id="@+id/phone_sms_import"
-            android:layout_below="@+id/textView2"
+            android:layout_below="@+id/contact_name_image_header"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
